<resources>
    <string name="app_name">FWD</string>
    <string name="facebook_app_id">512825496815589</string>
    <string name="facebook_client_token">430548984fd7afaa96c36b1f7672bf7d</string>
    <string name="fb_login_protocol_scheme">fb512825496815589</string>
    <string name="google_maps_key">AIzaSyCJswW0bTmfHHo1o2Y5yx3D9bMHHfpEzsE</string>
    <string name="no_internet">No Internet. Please check your connection</string>
    <string name="no_dater">Available to be filled\nby another friend request!</string>
    <string name="not_now">Not now</string>
    <string name="lets_do">Let\'s do it!</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="common_skip">Skip</string>
    <string name="common_continue">Continue</string>
    <string name="common_ok">OK</string>
    <string name="common_retry">Retry</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_yes">Yes</string>
    <string name="common_update">Update</string>
    <string name="common_delete">Delete</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_invites">No pending or expired invite</string>
    <string name="user_permission_message">This app needs permission to use this feature.</string>
    <string name="common_done">Done</string>
    <string name="common_next">Next</string>
    <string name="common_other">Other</string>
    <string name="common_resend">Resend</string>
    <string name="common_submit">Submit</string>
    <string name="add_friends">Add Friends</string>
    <string name="common_or">or</string>
    <string name="user_dater">Dater</string>
    <string name="user_matchmaker">Connector</string>
    <string name="common_confirm">Confirm</string>
    <string name="sequence_profile">%1$s/9</string>
    <string name="sequence_preference">%1$s/7</string>
    <string name="adjust_map_pin">Adjust your pin again</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="common_later">Later</string>
    <string name="keep_going">Keep Going!</string>
    <string name="learn_more">Learn More</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="character_limit">You have exceeded your character limit.</string>
    <string name="home">Home</string>
    <string name="connect">Connect</string>
    <string name="tribe">Tribe</string>
    <string name="wallet">Wallet</string>
    <string name="message">Message</string>
    <string name="screen_home">Home Screen</string>
    <string name="connector_selection">You cannot be a Connector until one of your friends invites you</string>
    <string name="pager_title_1">What is FWD?</string>
    <string name="pager_title_2">Connection Through People You Trust, Not An Algorithm</string>
    <string name="pager_title_3">More Personalized Information</string>
    <string name="pager_title_4">Social &amp; Supportive</string>
    <string name="pager_desc_1">Let’s face it — dating online is lonely and boring.\n\nYou\'re `introduced` to people you\'d  never date and have no idea how they are connected to your life.\n\nWith FWD, you can change that by inviting your trusted humans (Tribe) to help you out.</string>
    <string name="pager_desc_2">Your Tribe members introduce you to people they know in real life.\n\nThey also send you profile recommendations of people already on FWD.</string>
    <string name="pager_desc_3">You learn how your prospective match is connected you and your Tribe — and what your Tribe thinks of them.\n\nAnd if you don\'t want to build a Tribe, you don\'t have to. You can go solo and swipe alone.</string>
    <string name="pager_desc_4">You\'re no longer dating alone online and talking to random people you don\'t know.\n\nChat with your Tribe about their real-life connections, your matches, about life.\n\nAnd, hey, send them a coin for all their help.</string>
    <string name="user_detail_title">Who are you here for?</string>
    <string name="user_me">Me</string>
    <string name="user_my_friends">My Friend(s)</string>
    <string name="user_me_text">You\'re a <b>Dater!</b>\n\nSwipe for yourself and chat with people you match with.\n\nYou can add friends (Connectors) to make profile recommendations and introduce you to people they know.</string>
    <string name="user_friends_text">You\'re a <b>Connector!</b>\n\nYou can send profile recommendations to your friends.\n\nYou can also introduce your friends to someone you know.\n\n(Your profile will not appear in the FWD database.)</string>
    <string name="screen_otp">What\'s Your Number?</string>
    <string name="screen_otp_desc">We\'ll send you a confirmation code</string>
    <string name="phone_number">Phone number</string>
    <string name="invalid_otp">Invalid code. Try again.</string>
    <string name="enter_code">Enter Code</string>
    <string name="otp_message">We texted a code to:</string>
    <string name="resend_otp">Didn\'t receive code? Resend</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_timer">%1$s to resend code</string>
    <string name="message_time_out">You\'ve entered an incorrect\n code too many times</string>
    <string name="message_time_out2">\n\nPlease try again in 2 minutes</string>
    <string name="time_out">Timed Out</string>
    <string name="unable_to_detect_face">We are unable to detect a face</string>
    <string name="delete_account_message">Are you sure you want to Delete account?</string>
    <string name="trouble_signin">Trouble signing in?</string>
    <string name="agree_to_terms_and_policy">By creating an account or logging in, you agree \nto FWD\'s Terms of Use and Privacy Policy</string>
    <string name="facebook">Facebook</string>
    <string name="continue_facebook">Login with Facebook</string>
    <string name="continue_with">Continue with</string>
    <string name="move_map">Move map to change location</string>
    <string name="lock_location">(Your location will lock once you save it)</string>
    <string name="save_location">Save location</string>
    <string name="linkedin_dialog_title">FWD Would Like to Use LinkedIn to Sign In</string>
    <string name="linkedin_dialog_content">This allows LinkedIn to share\ninformation about you with FWD</string>
    <string name="fb_dialog_title">FWD Would Like to Use Facebook to Sign In</string>
    <string name="fb_dialog_content">This allows Facebook to share\ninformation about you with FWD</string>
    <string name="google_dialog_title">FWD Would Like to Use Google to Sign In</string>
    <string name="google_dialog_content">This allows Google to share\ninformation about you with FWD</string>
    <string name="select_country">Select a Country</string>
    <string name="login_failure">Network Failure</string>
    <string name="check_email">Invalid email address. Check and try again</string>
    <string name="failure_message">Sorry, an unexpected error occurred.\nPlease use another method or\ntry again later</string>
    <string name="profile_finish">Finished Already?</string>
    <string name="profile_finish_content">Sharing information about yourself will get you more matches and allow for better conversations!</string>
    <string name="preference_finish_content">Telling us more information about who you\'re interested in meeting will result in better matches!</string>
    <string name="hint_location">Where do you live?</string>
    <string name="travelling">Traveling to where?</string>
    <string name="travel_hint">(Locked)</string>
    <string name="travel_location">Travel Location</string>
    <string name="travel_on_off">Off / On</string>
    <string name="do_not_allow">Don’t Allow</string>
    <string name="allow">Allow</string>
    <string name="access_friends">FWD Needs Access to Your Friends List</string>
    <string name="access_friends_message">FWD shows you the mutual friends you and your Tribe have with prospective matches\n\nLike? Let us show you through Facebook mutual friends</string>
    <string name="curious_image">We\'re So Curious</string>
    <string name="upload_img_message">Upload a picture of yourself so prospective matches can know all of you\n\n(Also, your matches greatly increase. So there\'s that)</string>
    <string name="travelling_message">Traveling? Change your location to search that city instead of the area you live in</string>
    <string name="screen_profile">Profile</string>
    <string name="header_profile_dater">You (and your Connectors, if you add them) receive FWD profiles of people you can meet, which is based on the information you provide in your Profile and Preferences</string>
    <string name="header_profile_matchmaker">You are not creating a profile to be shown and matched. Only your friends see your name and photo</string>
    <string name="update_profile">Upload Profile Photo</string>
    <string name="verified">You are verified</string>
    <string name="verification_progress_">Verification in Progress</string>
    <string name="profile_guideline">Upload a picture that meets FWD\'s photo guidelines</string>
    <string name="choose_photo">Choose a photo where you can clearly see your face. You can change this photo later</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Date of Birth</string>
    <string name="dob_hint">What is your date of birth?</string>
    <string name="dob_message">You are not allowed to use FWD unless you are at least 18 years old</string>
    <string name="user_gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="location_message_1">FWD Does Not Track Your Location</string>
    <string name="location_message_2">We need your location to show you potential matches, which are based on the area you \nselect and the distance from this area\n\nYour location will remain fixed and cannot be changed unless you access the travel \nlocation feature</string>
    <string name="got_it">Got It!</string>
    <string name="onboarding">Onboarding</string>
    <string name="swiping">Swiping</string>
    <string name="or">or</string>
    <string name="settings">Settings</string>
    <string name="subscription_plan">Boosters</string>
    <string name="cancel_sub_title">Are sure you want to cancel your %1$s subscription?</string>
    <string name="cancel_sub_message_1">You will lose out on %1$s features, including:</string>
    <string name="cancel_sub_message_2">\u2022 More profiles and FWDs to swipe on</string>
    <string name="cancel_sub_message_3">\u2022 More people your friends have introduced you to and are guaranteed matches</string>
    <string name="cancel_sub_message_4">\u2022 More time to talk to expiring matches</string>
    <string name="cancel_sub_message_5">\u2022 Change your location for traveling</string>
    <string name="cancel_sub_message_6">\u2022 Rematch with lapsed matches</string>
    <string name="cancel_sub_message_7">\u2022 Recall your accidental no swipes</string>
    <string name="cancel_sub_message_8">\u2022 Super Likes that make you stand out</string>
    <string name="keep_sub">Keep %1$s!</string>
    <string name="yes_sure">Yes, I’m sure</string>
    <string name="activity">Activity</string>
    <string name="picture_problem">Photo Problem</string>
    <string name="picture_problem_1">You photo does not meet FWD Guidelines. Please review them here.\n\nPlease remove and replace your photo. If it is not removed within 24 hours, it will be deleted from your profile</string>
    <string name="picture_problem_2">Check them out there.</string>
    <string name="picture_problem_3">To continue using FWD, you will need to change your picture.</string>
    <string name="change_profile">Replace Photo</string>
    <string name="coin_balance">FWD Balance</string>
    <string name="mobile_recharge">Mobile Recharge</string>
</resources>