<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/tab_activity_selector"
        android:title="@string/activity" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/tab_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/tab_message_selector"
        android:title="@string/message" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/tab_settings_selector"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/tab_wallet_selector"
        android:title="@string/wallet"
        android:visible="false" />

</menu>