<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDialogGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="54dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/corner_white_bg" />

        <com.google.android.material.card.MaterialCardView
            style="@style/TopCornerCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCancelTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_orange_corner_gradient_bg"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:padding="30dp"
                    android:text="@string/cancel_sub_title"
                    android:textAppearance="@style/AppTheme.MediumFont"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCancelDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/cancel_sub_message_1"
                    android:textAppearance="@style/AppTheme.RegularFont"
                    android:textColor="@color/colorPagerDesc"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_2"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_3"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_4"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_5"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_6"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_7"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCancelDesc7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/cancel_sub_message_8"
                        android:textAppearance="@style/AppTheme.RegularFont"
                        android:textColor="@color/colorPagerDesc"
                        android:textSize="13sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/txtKeepAccount"
                    style="@style/materialIconButtonTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/keep_sub"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/txtCancelDesc"
                    app:layout_constraintStart_toStartOf="@id/txtCancelDesc"
                    app:layout_constraintTop_toBottomOf="@id/txtCancelDesc" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/txtConfirm"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/yes_sure"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/txtCancelDesc"
                    app:layout_constraintStart_toStartOf="@id/txtCancelDesc"
                    app:layout_constraintTop_toBottomOf="@id/txtCancelDesc" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
