<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="34dp"
        android:paddingBottom="30dp"
        android:text="@string/onboarding"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="34dp"
        android:paddingBottom="30dp"
        android:text="@string/home"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSwiping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="34dp"
        android:paddingBottom="30dp"
        android:text="@string/swiping"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_background" />

</LinearLayout>