<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBalanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtBalance"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="₹21"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnMobileRecharge"
        android:layout_centerInParent="true"
        android:layout_marginBottom="43dp"
        android:drawableEnd="@drawable/info"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPagerDesc"
        android:text="@string/coin_balance"
        android:textAppearance="@style/AppTheme.RegularFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMobileRecharge"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="50dp"
        android:enabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/mobile_recharge"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMobileRecharge"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/or"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubscription"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtOr"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_green_gradient_bg"
        android:elevation="50dp"
        android:enabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/subscription_plan"
        android:textAppearance="@style/AppTheme.MediumFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="15sp"
        app:backgroundTint="@null" />
</RelativeLayout>
