<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDialogGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/profile_alert" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/picture_problem"
                android:textAppearance="@style/AppTheme.MediumFont"
                android:textColor="@color/colorPagerDesc"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/picture_problem_1"
                android:textAppearance="@style/AppTheme.RegularFont"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/picture_problem_2"
                android:textAppearance="@style/AppTheme.RegularFont"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/picture_problem_3"
                android:textAppearance="@style/AppTheme.RegularFont"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txtChangeProfile"
                style="@style/materialIconButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:enabled="true"
                android:text="@string/change_profile"
                app:layout_constraintEnd_toEndOf="@id/txtVerifyMessage"
                app:layout_constraintStart_toStartOf="@id/txtVerifyMessage"
                app:layout_constraintTop_toBottomOf="@id/txtVerifyMessage" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
