<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mint_gradient"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/location_message_1"
            android:textAppearance="@style/AppTheme.MediumFont"
            android:textColor="@color/colorPagerDesc"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgToolTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/verify_profile" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTipDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/location_message_2"
        android:textAppearance="@style/AppTheme.RegularFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTipGotIt"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/got_it"
        android:textAllCaps="true"
        android:textAppearance="@style/AppTheme.BoldFont"
        android:textColor="@color/colorPagerDesc"
        android:textSize="16sp" />

</LinearLayout>